--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     .hero {
       min-height: 100vh;
       background: linear-gradient(135deg, rgba(255, 250, 247, 0), rgba(254, 243, 231, 0.95)), 
-                  url('/images/kuch\ testity.png') center/cover no-repeat;
+                  url('/kuch-testity.png') center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -393,13 +393,23 @@
   </div>
 </section>
 
+ <section id="owner" class="owner-section">
+    <div class="owner-content">
+      <div class="owner-image">
+        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="मालिक">
+      </div>
+      <h2>हमारे बारे में</h2>
+      <p>6 सालों से फ़ास्ट फूड के प्रति प्रेम ❤️ और समर्पण। हर डिश घर जैसा स्वाद देने के लिए बनाई जाती है। ताज़ा सामग्री, घर के नुस्खे, और बहुत प्यार। ग्राहकों की संतुष्टि हमारी सबसे बड़ी प्राथमिकता है।</p>
+    </div>
+  </section>
+
   <!-- Food Menu Sections -->
   <section id="menu" class="food-sections">
     <!-- Burger -->
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images//pngtree-hamburger-cute-emoticon-picture-png-image_15096600.avif" alt="स्पेशल बर्गर">
+          <img src="/pngtree-hamburger-cute-emoticon-picture-png-image_15096600.avif" alt="स्पेशल बर्गर">
         </div>
         <div class="food-text">
           <h3>स्पेशल बर्गर</h3>
@@ -413,7 +423,7 @@
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images//images (1).jpg" alt="क्रिस्पी समोसा">
+          <img src="/samosa.jpg" alt="क्रिस्पी समोसा">
         </div>
         <div class="food-text">
           <h3>क्रिस्पी समोसा</h3>
@@ -427,7 +437,7 @@
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images//pngtree-steamed-momos-dumplings-with-spicy-sauce-cartoon-illustration-vector-png-image_21136993.png" alt="स्टीम मोमोज">
+          <img src="/pngtree-steamed-momos-dumplings-with-spicy-sauce-cartoon-illustration-vector-png-image_21136993.png" alt="स्टीम मोमोज">
         </div>
         <div class="food-text">
           <h3>स्टीम मोमोज</h3>
@@ -441,7 +451,7 @@
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images/pngtree-testy-fast-food-vagetable-role-png-image_20237390.png" alt="देसी रोल">
+          <img src="/pngtree-testy-fast-food-vagetable-role-png-image_20237390.png" alt="देसी रोल">
         </div>
         <div class="food-text">
           <h3>देसी रोल</h3>
@@ -455,7 +465,7 @@
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images/pngtree-a-plate-of-french-fries-with-ketchup-is-isolated-on-transparent-png-image_16351080 (1).png" alt="गोल्डन फ्राइज">
+          <img src="/pngtree-a-plate-of-french-fries-with-ketchup-is-isolated-on-transparent-png-image_16351080 (1).png" alt="गोल्डन फ्राइज">
         </div>
         <div class="food-text">
           <h3>गोल्डन फ्राइज</h3>
@@ -469,7 +479,7 @@
     <div class="food-item">
       <div class="food-content">
         <div class="food-image">
-          <img src="/images//images (2).jpg" alt="ठंडे पेय पदार्थ">
+          <img src="/images (2).jpg" alt="ठंडे पेय पदार्थ">
         </div>
         <div class="food-text">
           <h3>ठंडे पेय पदार्थ</h3>
@@ -480,16 +490,7 @@
     </div>
   </section>
 
-  <!-- Owner Section -->
-  <section id="owner" class="owner-section">
-    <div class="owner-content">
-      <div class="owner-image">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="मालिक">
-      </div>
-      <h2>हमारे बारे में</h2>
-      <p>6 सालों से स्ट्रीट फूड के प्रति प्रेम और समर्पण। हर डिश घर जैसा स्वाद देने के लिए बनाई जाती है। ताज़ा सामग्री, घर के नुस्खे, और बहुत प्यार। ग्राहकों की संतुष्टि हमारी सबसे बड़ी प्राथमिकता है।</p>
-    </div>
-  </section>
+
 
   <!-- Contact Section -->
   <section id="contact" class="contact-section">
